--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ SpaceWeather/**/*.INX
 Huggingface/course_nlp/unit02_using_transformers/dir_*
 Huggingface/course_nlp/unit03_fine_tuning/test-trainer/
 Huggingface/diffusers/00_get_started/*.png
+Huggingface/course_deep_RL/unit1_bonus/ml-agents
+Huggingface/course_deep_RL/unit1_bonus/results
+Huggingface/course_deep_RL/unit1_bonus/trained*
+Huggingface/course_deep_RL/unit3*/hub
+Huggingface/course_deep_RL/unit3*/logs
