--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ Book/Numerical_Python_Schmidt/_code/
 **/.spyproject
 Book/Scientific_Python/scientific-python-lectures/
 !Book/Scientific_Python/**/*.csv
+Book/Think_Stats/*.dct
+Book/Think_Stats/*.dat.gz
