--- a/.gitignore
+++ b/.gitignore
@@ -50,14 +50,14 @@ SSW_WinterSchool/01_upper_atmosphere/data/**/*.hdf5
 SSW_WinterSchool/01_upper_atmosphere/data/**/*.nc
 SpaceML/**/*.fits
 SpaceWeather/**/*.INX
-Huggingface/course_nlp/unit02_using_transformers/dir_*
-Huggingface/course_nlp/unit03_fine_tuning/test-trainer/
-Huggingface/diffusers/00_get_started/*.png
-Huggingface/course_deep_RL/unit1_bonus/ml-agents
-Huggingface/course_deep_RL/unit1_bonus/results
-Huggingface/course_deep_RL/unit1_bonus/trained*
-Huggingface/course_deep_RL/unit3*/hub
-Huggingface/course_deep_RL/unit3*/logs
+Huggingface/**/course_nlp/unit02_using_transformers/dir_*
+Huggingface/**/course_nlp/unit03_fine_tuning/test-trainer/
+Huggingface/**/diffusers/00_get_started/*.png
+Huggingface/**/course_deep_RL/unit1_bonus/ml-agents
+Huggingface/**/course_deep_RL/unit1_bonus/results
+Huggingface/**/course_deep_RL/unit1_bonus/trained*
+Huggingface/**/course_deep_RL/unit3*/hub
+Huggingface/**/course_deep_RL/unit3*/logs
 NeRF/repo/
 NeRF/papers*/**/novel_views/
 NeRF/output*/
